--- a/REWORK/src/stylesheet/index/index.css
+++ b/REWORK/src/stylesheet/index/index.css
@@ -5,14 +5,20 @@ html {
   padding: 0;
 }
 html body main {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   position: relative;
   top: 23px;
   left: 312px;
   width: 100vw;
   height: calc(100vh - 23px);
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-top: 1px solid var(--border-color);
   border-left: 1px solid var(--border-color);
   border-top-left-radius: 10px;
@@ -47,22 +53,29 @@ html body main #profile-container #profile-content {
   list-style: none;
 }
 html body main #profile-container #profile-content li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   position: relative;
 }
 html body main #profile-container #profile-content li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 5px;
   padding: 10px;
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #profile-container #profile-content li a:hover {
   background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #profile-container #profile-content li a:active {
   background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #profile-container #profile-content li p {
@@ -71,6 +84,9 @@ html body main #profile-container #profile-content li p {
   left: 10px;
   margin-top: -20px;
   margin-right: 10px;
+}
+html body main #profile-container #profile-content #more-profile a, html body main #profile-container #profile-content #add-profile a {
+  cursor: not-allowed;
 }
 html body main #help-container {
   position: absolute;
@@ -91,22 +107,29 @@ html body main #help-container #help-content {
   list-style: none;
 }
 html body main #help-container #help-content li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   position: relative;
 }
 html body main #help-container #help-content li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 5px;
   padding: 10px;
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #help-container #help-content li a:hover {
   background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #help-container #help-content li a:active {
   background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #help-container #help-content li p {
@@ -140,23 +163,30 @@ html body main #settings-container #settings-content {
   list-style: none;
 }
 html body main #settings-container #settings-content li {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
   position: relative;
   bottom: 11px;
 }
 html body main #settings-container #settings-content li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin-right: 5px;
   padding: 10px;
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #settings-container #settings-content li a:hover {
   background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #settings-container #settings-content li a:active {
   background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main #settings-container #settings-content li p {
@@ -290,14 +320,17 @@ html body main form #main-content #post-url #clearButton {
   height: 24px;
   border-radius: 5px;
   cursor: pointer;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #post-url #clearButton:hover {
   background-color: var(--input-cross);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #post-url #clearButton:active {
   opacity: 0.8;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #post-url #clearButton img {
@@ -306,6 +339,8 @@ html body main form #main-content #post-url #clearButton img {
   height: 12px;
 }
 html body main form #main-content #login-data {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-top: 15px;
 }
@@ -315,6 +350,9 @@ html body main form #main-content #login-data input {
 html body main form #main-content #login-data #username #username-form {
   width: 160px;
   padding-right: 40px;
+}
+html body main form #main-content #login-data #username #profileDropdown:hover + #searchProfile #searchProfileContent {
+  display: none !important;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain {
   position: absolute;
@@ -335,14 +373,17 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   height: 24px;
   border-radius: 5px;
   cursor: pointer;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton:hover {
   background-color: var(--input-cross);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton:active {
   opacity: 0.8;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownMain #profileDropdownButton .profileDropdownImage {
@@ -367,7 +408,8 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   -webkit-backdrop-filter: blur(100px);
           backdrop-filter: blur(100px);
   border-radius: 5px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 2;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:first-child {
@@ -382,17 +424,67 @@ html body main form #main-content #login-data #username #profileDropdown #profil
   padding: 10px;
   margin-left: 5px;
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:hover {
   background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown #profileDropdownContent a:active {
   background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #username #profileDropdown:hover #profileDropdownContent {
+  display: block;
+}
+html body main form #main-content #login-data #username #searchProfile {
+  position: absolute;
+  height: 10px;
+  width: 20px;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent {
+  display: block;
+  position: absolute;
+  width: 204px;
+  margin-left: 1px;
+  border: 1px solid var(--info-banner-border);
+  background-color: var(--dropdown-bg);
+  -webkit-backdrop-filter: blur(100px);
+          backdrop-filter: blur(100px);
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 2;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent a:first-child {
+  margin-top: 5px;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent a:last-child {
+  margin-bottom: 5px;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent a {
+  display: none;
+  margin-right: 5px;
+  padding: 10px;
+  margin-left: 5px;
+  border-radius: 5px;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent a:hover {
+  background-color: var(--nav-hyperlink);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #searchProfile #searchProfileContent a:active {
+  background-color: var(--nav-hyperlink-active);
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+html body main form #main-content #login-data #username #searchProfile:hover #searchProfileContent {
   display: block;
 }
 html body main form #main-content #login-data #password {
@@ -426,14 +518,17 @@ html body main form #main-content #login-data #password #togglePW {
   height: 24px;
   border-radius: 5px;
   cursor: pointer;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #password #togglePW:hover {
   background-color: var(--input-cross);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #password #togglePW:active {
   opacity: 0.8;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #login-data #password #togglePW #togglePwImage {
@@ -451,31 +546,41 @@ html body main form #main-content #additional-settings[open] summary ~ * {
 @-webkit-keyframes sweep {
   0% {
     opacity: 0;
-    transform: translateY(-3px);
+    -webkit-transform: translateY(-3px);
+            transform: translateY(-3px);
   }
   90% {
     opacity: 1;
   }
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 @keyframes sweep {
   0% {
     opacity: 0;
-    transform: translateY(-3px);
+    -webkit-transform: translateY(-3px);
+            transform: translateY(-3px);
   }
   90% {
     opacity: 1;
   }
   100% {
-    transform: translateY(0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 html body main form #main-content #additional-settings #details {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   cursor: pointer;
 }
 html body main form #main-content #additional-settings #details .line-additional {
@@ -490,6 +595,8 @@ html body main form #main-content #additional-settings #details #small-detail-ti
   padding-left: 12px;
 }
 html body main form #main-content #additional-settings #a-d-content {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding-top: 10px;
   padding-bottom: 15px;
@@ -509,14 +616,17 @@ html body main form #main-content #additional-settings #a-d-content .save-profil
   border: 1px solid var(--checkbox-border);
   border-radius: 4px;
   background-color: var(--checkbox-bg);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:hover + label::before, html body main form #main-content #additional-settings #a-d-content .save-profile-dark:hover + label::before {
   background-color: var(--checkbox-hover);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:active + label::before, html body main form #main-content #additional-settings #a-d-content .save-profile-dark:active + label::before {
   background-color: var(--checkbox-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:checked + label::before, html body main form #main-content #additional-settings #a-d-content .save-profile-dark:checked + label::before {
@@ -525,6 +635,7 @@ html body main form #main-content #additional-settings #a-d-content .save-profil
   background-repeat: no-repeat;
   background-position: center;
   background-size: 10px 10px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:checked + label::before {
@@ -536,11 +647,13 @@ html body main form #main-content #additional-settings #a-d-content .save-profil
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:checked:hover + label::before, html body main form #main-content #additional-settings #a-d-content .save-profile-dark:checked:hover + label::before {
   border: 1px solid var(--checkbox-check-hover);
   background-color: var(--checkbox-check-hover);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content .save-profile-light:active:hover + label::before, html body main form #main-content #additional-settings #a-d-content .save-profile-dark:active:hover + label::before {
   border: 1px solid var(--checkbox-check-active);
   background-color: var(--checkbox-check-active);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content #save-local {
@@ -561,21 +674,30 @@ html body main form #main-content #additional-settings #a-d-content #edit-commen
   background: var(--bg-sec-button);
   border: 1px solid var(--bg-border-button);
   border-radius: 5px;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content #edit-comments #edit-button:hover {
   background-color: var(--bg-hover-sec-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #additional-settings #a-d-content #edit-comments #edit-button:active {
   color: var(--active-sec-button-color);
   background-color: var(--bg-active-sec-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 1px;
 }
 html body main form #main-content #start-stop #start button, html body main form #main-content #start-stop #pause button, html body main form #main-content #start-stop #stop button {
@@ -591,6 +713,7 @@ html body main form #main-content #start-stop #start-btn {
   border: 1px solid transparent;
   border-radius: 5px;
   background-clip: padding-box;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #start-btn::after {
@@ -606,11 +729,13 @@ html body main form #main-content #start-stop #start-btn::after {
 }
 html body main form #main-content #start-stop #start-btn:hover {
   background-color: var(--bg-hover-main-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #start-btn:active {
   color: var(--active-main-button-color);
   background-color: var(--bg-active-main-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #pause-btn {
@@ -622,6 +747,7 @@ html body main form #main-content #start-stop #pause-btn {
   border: 1px solid transparent;
   border-radius: 5px;
   background-clip: padding-box;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #pause-btn::after {
@@ -637,11 +763,13 @@ html body main form #main-content #start-stop #pause-btn::after {
 }
 html body main form #main-content #start-stop #pause-btn:hover {
   background-color: var(--bg-hover-main-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #pause-btn:active {
   color: var(--active-main-button-color);
   background-color: var(--bg-active-main-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #stop-btn {
@@ -653,6 +781,7 @@ html body main form #main-content #start-stop #stop-btn {
   border: 1px solid transparent;
   border-radius: 5px;
   background-clip: padding-box;
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #stop-btn::after {
@@ -668,11 +797,13 @@ html body main form #main-content #start-stop #stop-btn::after {
 }
 html body main form #main-content #start-stop #stop-btn:hover {
   background-color: var(--bg-hover-sec-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body main form #main-content #start-stop #stop-btn:active {
   color: var(--active-sec-button-color);
   background-color: var(--bg-active-sec-button);
+  -webkit-transition: 0.2s;
   transition: 0.2s;
 }
 html body #legal-note {
