--- a/REWORK/src/stylesheet/index/index.scss
+++ b/REWORK/src/stylesheet/index/index.scss
@@ -72,6 +72,9 @@ html {
                             margin-right: 10px;
                         }                        
                     }
+                    #more-profile a, #add-profile a {
+                        cursor: not-allowed;
+                    }
                 }
             }
             #help-container {
@@ -320,6 +323,9 @@ html {
                                 width: 160px;
                                 padding-right: 40px;
                             }
+                            #profileDropdown:hover + #searchProfile #searchProfileContent {
+                                display: none !important;
+                            }
                             #profileDropdown {
                                 #profileDropdownMain {
                                     position: absolute;
@@ -398,6 +404,48 @@ html {
                                     }
                                 }
                                 &:hover #profileDropdownContent {
+                                    display: block;
+                                }
+                            }
+                            #searchProfile {
+                                position: absolute;
+                                height: 10px;
+                                width: 20px;
+                                #searchProfileContent {
+                                    display: block;
+                                    position: absolute;
+                                    width: 204px;
+                                    margin-left: 1px;                               
+                                    border: 1px solid var(--info-banner-border);
+                                    background-color: var(--dropdown-bg);
+                                    backdrop-filter: blur(100px);
+                                    border-radius: 5px;
+                                    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+                                    z-index: 2;
+                                    a:first-child {
+                                        margin-top: 5px;
+                                    }
+                                    a:last-child {
+                                        margin-bottom: 5px;
+                                    }
+                                    a {
+                                        display: none;
+                                        margin-right: 5px;
+                                        padding: 10px;
+                                        margin-left: 5px;
+                                        border-radius: 5px;
+                                        transition: .2s;
+                                        &:hover {
+                                            background-color: var(--nav-hyperlink);
+                                            transition: .2s;
+                                        }
+                                        &:active {
+                                            background-color: var(--nav-hyperlink-active);
+                                            transition: .2s;
+                                        }
+                                    }
+                                }
+                                &:hover #searchProfileContent {
                                     display: block;
                                 }
                             }
